--- a/WireHmi.project
+++ b/WireHmi.project
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<CodeLite_Project Name="test_serial_hw" InternalType="">
+<CodeLite_Project Name="WireHmi" InternalType="" Version="10.0.0">
   <Plugins>
     <Plugin Name="qmake">
       <![CDATA[00020001N0005Debug0000000000000001N0007Release000000000000]]>
@@ -26,6 +26,37 @@
  }]]]>
     </Plugin>
   </Plugins>
+  <VirtualDirectory Name="WireHmi">
+    <File Name="README_fr-FR.md"/>
+    <File Name="README.md"/>
+    <File Name="library.properties"/>
+    <File Name="COPYING"/>
+    <File Name="AUTHORS"/>
+    <VirtualDirectory Name="examples">
+      <VirtualDirectory Name="LedTest">
+        <File Name="examples/LedTest/LedTest.ino"/>
+      </VirtualDirectory>
+      <VirtualDirectory Name="SlaveTest">
+        <File Name="examples/SlaveTest/SlaveTest.ino"/>
+      </VirtualDirectory>
+      <VirtualDirectory Name="BacklightTest">
+        <File Name="examples/BacklightTest/BacklightTest.ino"/>
+      </VirtualDirectory>
+      <VirtualDirectory Name="KeyboardTest">
+        <File Name="examples/KeyboardTest/KeyboardTest.ino"/>
+      </VirtualDirectory>
+      <VirtualDirectory Name="Toueris2Hmi">
+        <File Name="examples/Toueris2Hmi/Toueris2Hmi.ino"/>
+      </VirtualDirectory>
+    </VirtualDirectory>
+    <VirtualDirectory Name="src">
+      <File Name="src/WireHmi.h"/>
+      <File Name="src/WireHmi.cpp"/>
+      <File Name="src/Toueris2Hmi.h"/>
+      <File Name="src/Toueris2Hmi.cpp"/>
+    </VirtualDirectory>
+    <File Name="keywords.txt"/>
+  </VirtualDirectory>
   <Description/>
   <Dependencies/>
   <Settings Type="Executable">
@@ -125,10 +156,6 @@
       </Completion>
     </Configuration>
   </Settings>
-  <VirtualDirectory Name="test_serial_hw">
-    <File Name="Makefile"/>
-    <File Name="test_serial_hw.c"/>
-  </VirtualDirectory>
   <Dependencies Name="Debug"/>
   <Dependencies Name="Release"/>
 </CodeLite_Project>
