--- a/src/toueris2-hmi-firmware.project
+++ b/src/toueris2-hmi-firmware.project
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<CodeLite_Project Name="toueris2-hmi-firmware" InternalType="">
+<CodeLite_Project Name="toueris2-hmi-firmware" InternalType="" Version="10.0.0">
   <Plugins>
     <Plugin Name="qmake">
       <![CDATA[00020001N0005Debug0000000000000001N0007Release000000000000]]>
@@ -138,6 +138,7 @@
     <File Name="../board/avrio-board-kernel.h"/>
   </VirtualDirectory>
   <VirtualDirectory Name="WireHmi">
+    <File Name="../config.h"/>
     <File Name="../LICENSE"/>
     <File Name="../LICENCE"/>
     <File Name="../board.mk"/>
